--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-          apiKey: "AIzaSyCWPRQQa4klfjFHSL7p1BSv-btHyDH0-aA",
+          apiKey: "Your_API_key",
           authDomain: "weather-dashboard-5523f.firebaseapp.com",
           projectId: "weather-dashboard-5523f",
           storageBucket: "weather-dashboard-5523f.firebasestorage.app",
